--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -68,3 +68,6 @@ jobs:
     # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
     - name: Generate and submit dependency graph
       uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+      with: 
+        # The gradle project is not in the root of the repository.
+        build-root-directory: gradle6-w-guava
